[gd_scene load_steps=3 format=2]

[ext_resource path="res://Thrower.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 108.0

[node name="Thrower" type="Node2D" groups=["Thrower"]]
script = ExtResource( 1 )

[node name="ThrowingLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 5.0
default_color = Color( 1, 0, 0, 1 )

[node name="GrabArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource( 1 )

[node name="StartPoint" type="Position2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="input_event" from="GrabArea" to="." method="_on_GrabArea_input_event"]
